order-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order-proxy
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          serviceName: order
          servicePort: 9000
        path: /order/create
      - backend:
          serviceName: order
          servicePort: 9000
        path: /order/test
      - backend:
          serviceName: order
          servicePort: 9000
        path: /order/config
      - backend:
          serviceName: order
          servicePort: 9000
        path: /order/
